PA3/tests/bad/bad_return.cl
class Main {
	main() : A {
		new A
	};
};